--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,7 +2,11 @@ html {
   font-size: 62.5%;
 
   body {
-    background-color: @white-1m;
+    background-image: url("../img/guidr-background.jpg");
+    background-position: 14%14%;
+    background-size: 2200px auto;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
 }
 
