--- a/src/less/tripgrid.less
+++ b/src/less/tripgrid.less
@@ -25,21 +25,38 @@
     }
   }
 }
-
 /* Modal Styles */
 div {
+    ModalHeader {
+      display: flex;
+      justify-content: space-between;
+    }
+  
   .modal.show .modal-dialog {
+    background-color: rgba(106, 162, 197, 0.5);
     transform: translateY(20%);
-
+    
     .modal-body {
       display: flex;
-
+      background-color: rgba(106, 162, 197, 0.5);
+      width: 100%;
+      max-width: 1000px;
+      height: 100%;
+      margin: 5px;
+      padding: 26px 6px;
+      border: 2px solid @tertiary;
+      -webkit-box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4); 
+      box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
       .modal-info {
         display: flex;
-
+        Label {
+          background-color: @secondary;
+          color: white;
+          padding: 5px;
+        }
         img {
-          width: 150px;
-          height: 150px;
+          width: 100%;
+          height: 220px;
         }
 
         div {
@@ -52,4 +69,4 @@ div {
       justify-content: space-between;
     }
   }
-}
+ }
