--- a/src/less/usergrid.less
+++ b/src/less/usergrid.less
@@ -4,9 +4,12 @@
     grid-gap: 25px;
 
     margin-top: 30px;
-
+    img {
+        width: 100%;
+    }
     .user-grid__card {
-        background-color: @white-1l;
+        background-color: rgba(106, 162, 197, 0.5);
+
         height: 150px;
         .flexColumnCenter();
         justify-content: space-between;
@@ -19,6 +22,7 @@
 
             .flexColumnCenter();
         }
+        
 
         .modal-container {
             width: 100%;
