--- a/src/css/index.css
+++ b/src/css/index.css
@@ -330,17 +330,18 @@ html body {
   grid-gap: 25px;
   margin-top: 30px;
 }
-.user-grid img {
-  width: 100%;
-}
 .user-grid .user-grid__card {
   background-color: rgba(106, 162, 197, 0.5);
-  height: 150px;
+  height: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   justify-content: space-between;
+}
+.user-grid .user-grid__card img {
+  width: 100%;
+  height: 250px;
 }
 .user-grid .user-grid__card .user-grid__card__banner {
   width: 100%;
