--- a/src/css/index.css
+++ b/src/css/index.css
@@ -262,28 +262,51 @@ html body {
   margin-top: 45px;
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 .home .home-search {
   width: 100%;
   max-width: 1068px;
   margin: 0 auto;
 }
+.home .home-search #view-button {
+  position: fixed;
+  top: 105px;
+  left: 75px;
+  font-size: 1.4rem;
+  letter-spacing: 2px;
+  background-color: #009ac0;
+  border: 2px solid #f99e54;
+  width: 100%;
+  max-width: 100px;
+  height: 30px;
+  color: white;
+}
+.home .home-search #view-button:hover {
+  background-color: white;
+  color: #009ac0;
+  -webkit-box-shadow: 2px 4px 14px 2px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 4px 14px 2px rgba(0, 0, 0, 0.4);
+}
+.home .home-search .side-panel {
+  background-color: rgba(0, 0, 0, 0.3);
+}
 .home-search .side-panel {
   width: 100%;
+  margin-top: 58px;
 }
 .home-search .side-panel .side-panel__title {
-  font-size: 3rem;
+  font-size: 4.8rem;
   text-align: center;
   padding: 10px;
-  border-bottom: 2px solid #eee;
+  color: white;
 }
 .home-search .side-panel .search {
-  background-color: #D3D3D3;
+  background-color: transparent;
   width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
-  border-bottom: 2px solid #eee;
   padding: 20px;
 }
 .home-search .side-panel .search input {
