--- a/src/less/home.less
+++ b/src/less/home.less
@@ -3,10 +3,39 @@
   display: flex;
   justify-content: space-between;
 
+  position: relative;
+
   .home-search {
     width: 100%;
     max-width: 1068px;
 
     margin: 0 auto;
-  }
+
+    #view-button {
+      position: fixed;
+      top: 105px;
+      left: 75px;
+
+      font-size: 1.4rem;
+      letter-spacing: 2px;
+
+      background-color: @med-main;
+      border: 2px solid @tertiary;
+      width: 100%;
+      max-width: 100px; 
+      height: 30px;
+    
+      color: white;
+
+      &:hover {
+        background-color: white;
+        color: @med-main;
+        -webkit-box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4); 
+        box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
+        }
+      }
+
+      .side-panel {
+        background-color: rgba(0, 0, 0, 0.3);}
+    }
 }
