--- a/src/less/top-panel.less
+++ b/src/less/top-panel.less
@@ -1,24 +1,25 @@
 .home-search {
   .side-panel {
     width: 100%;
+    margin-top: 58px;
   
     .side-panel__title {
-      font-size: 3rem;
+      font-size: 4.8rem;
       text-align: center;
       padding: 10px;
-      border-bottom: 2px solid @white-1l;
+
+      color: white;
     }
   
   
     .search {
-      background-color: @white-1d;
+      background-color: transparent;
       width: 100%;
       margin: 0 auto;
   
       display: flex;
       justify-content: center;
   
-      border-bottom: 2px solid @white-1l;
       padding: 20px;
        input {
          width: 30%;
