--- a/src/css/index.css
+++ b/src/css/index.css
@@ -330,18 +330,20 @@ html body {
 }
 .home-search .side-panel .side-panel__btn--container {
   display: flex;
+  background-color: transparent;
 }
 .home-search .side-panel .side-panel__btn--container .side-panel__btn {
   font-size: 2.4rem;
   letter-spacing: 3px;
+  color: white;
   width: 100%;
   height: 50px;
   border: none;
-  border-bottom: 2px solid #eee;
-  background-color: #D3D3D3;
+  background-color: transparent;
 }
 .home-search .side-panel .side-panel__btn--container .side-panel__btn:hover {
   background-color: #f99e54;
+  color: black;
 }
 .home-search .side-panel .side-panel__btn--container .side-panel__btn:focus {
   outline: none;
@@ -436,10 +438,11 @@ html body {
 }
 .home-search .grid,
 .portfolio-container .grid {
+  margin-top: 30px;
   width: 100%;
-  background-color: #eee;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
+  grid-gap: 25px;
 }
 @media (min-width: 768px) {
   .home-search .grid,
@@ -449,14 +452,24 @@ html body {
 }
 .home-search .grid .tripgrid__card,
 .portfolio-container .grid .tripgrid__card {
-  background-color: #D3D3D3;
-  text-align: center;
-  font-size: 1.8rem;
-  padding: 8px 12px;
+  background-color: rgba(106, 162, 197, 0.5);
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
 }
-.home-search .grid .tripgrid__card:nth-of-type(even),
-.portfolio-container .grid .tripgrid__card:nth-of-type(even) {
-  background-color: #eee;
+.home-search .grid .tripgrid__card h2,
+.portfolio-container .grid .tripgrid__card h2 {
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  background-color: #7fc0e8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 /* Modal Styles */
 div ModalHeader {
