--- a/src/less/top-panel.less
+++ b/src/less/top-panel.less
@@ -50,20 +50,22 @@
   
     .side-panel__btn--container {
       display: flex;
+      background-color: transparent;
+     
   
       .side-panel__btn {
         font-size: 2.4rem;
         letter-spacing: 3px;
+        color: white;
   
         width: 100%;
         height: 50px;
   
         border: none;
-        border-bottom: 2px solid @white-1l;
-        background-color: @white-1d;
-  
+        background-color: transparent;
         &:hover {
           background-color: @tertiary;
+          color: black;
         }
   
         &:focus {
