--- a/src/less/tripgrid.less
+++ b/src/less/tripgrid.less
@@ -1,11 +1,12 @@
 .home-search, .portfolio-container {
   /* Grid Styles */
   .grid {
+    margin-top: 30px;
   width: 100%;
-  background-color: @white-1l;
 
   display: grid;
   grid-template-columns: repeat(1, 1fr);
+  grid-gap: 25px;
 
   @media(min-width: 768px) {
     grid-template-columns: repeat(3, 1fr);
@@ -13,15 +14,21 @@
 
 
   .tripgrid__card {
-    background-color: @white-1d;
-    text-align: center;
-    font-size: 1.8rem;
+    background-color: rgba(106, 162, 197, 0.5);
 
-    padding: 8px 12px;
+    height: 350px;
+    .flexColumnCenter();
+    justify-content: space-between;
 
-      &:nth-of-type(even) {
-        background-color: @white-1l;
-      }
+    h2 {
+      width: 100%;
+      height: 40px;
+      margin: 0;
+      background-color: @light-main;
+
+      .flexColumnCenter();
+    }
+
     }
   }
 }
