--- a/src/css/index.css
+++ b/src/css/index.css
@@ -291,6 +291,42 @@ html body {
 .home .home-search .side-panel {
   background-color: rgba(0, 0, 0, 0.3);
 }
+.home .home-search .route-page {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.home .home-search .route-page .route-page__cont {
+  height: 500px;
+  width: 750px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.home .home-search .route-page .route-page__cont h1 {
+  font-size: 5rem;
+  color: white;
+}
+.home .home-search .route-page .route-page__cont button {
+  margin: 30px;
+  height: 50px;
+  width: 300px;
+  font-size: 2.8rem;
+  letter-spacing: 3px;
+  background-color: #009ac0;
+  border: 2px solid #f99e54;
+  color: white;
+}
+.home .home-search .route-page .route-page__cont button:hover {
+  background-color: white;
+  color: #009ac0;
+  -webkit-box-shadow: 2px 4px 14px 2px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 4px 14px 2px rgba(0, 0, 0, 0.4);
+}
 .home-search .side-panel {
   width: 100%;
   margin-top: 58px;
@@ -353,7 +389,7 @@ html body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 25px;
-  margin-top: 30px;
+  margin: 30px 0;
 }
 .user-grid .user-grid__card {
   background-color: rgba(106, 162, 197, 0.5);
@@ -388,6 +424,9 @@ html body {
   margin-bottom: 10px;
   border-radius: 20px;
   width: 75px;
+}
+.modal.show .modal-dialog .modal-body {
+  margin: 0;
 }
 .portfolio {
   width: 100%;
@@ -486,7 +525,7 @@ div .modal.show .modal-dialog .modal-body {
   width: 100%;
   max-width: 1000px;
   height: 100%;
-  margin: 5px;
+  margin: 0;
   padding: 26px 6px;
   border: 2px solid #f99e54;
   -webkit-box-shadow: 2px 4px 14px 2px rgba(0, 0, 0, 0.4);
