--- a/src/less/home.less
+++ b/src/less/home.less
@@ -37,5 +37,44 @@
 
       .side-panel {
         background-color: rgba(0, 0, 0, 0.3);}
+
+      .route-page {
+        width: 100%;
+        height: 100vh;
+        .flexColumnCenter();
+
+        .route-page__cont {
+          height: 500px;
+          width: 750px;
+
+          .flexColumnCenter();
+
+          h1 {
+            font-size: 5rem;
+            color: white;
+          }
+
+          button {
+            margin: 30px;
+
+            height: 50px;
+            width: 300px;
+
+            font-size: 2.8rem;
+            letter-spacing: 3px;
+
+            background-color: @med-main;
+            border: 2px solid @tertiary;
+            color: white;
+
+            &:hover {
+              background-color: white;
+              color: @med-main;
+              -webkit-box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4); 
+              box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
+              }
+          }
+        }
+      }
     }
 }
