--- a/src/less/tripgrid.less
+++ b/src/less/tripgrid.less
@@ -49,7 +49,7 @@ div {
       width: 100%;
       max-width: 1000px;
       height: 100%;
-      margin: 5px;
+      margin: 0;
       padding: 26px 6px;
       border: 2px solid @tertiary;
       -webkit-box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4); 
