--- a/src/less/usergrid.less
+++ b/src/less/usergrid.less
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 25px;
 
-    margin-top: 30px;
+    margin: 30px 0;
 
     .user-grid__card {
         background-color: rgba(106, 162, 197, 0.5);
@@ -37,6 +37,14 @@
                 border-radius: 20px;
                 width: 75px;
             }
+        }
+    }
+}
+
+.modal.show {
+    .modal-dialog {
+        .modal-body {
+            margin: 0;
         }
     }
 }
