--- a/src/css/index.css
+++ b/src/css/index.css
@@ -198,7 +198,7 @@ html body {
   left: 0;
   height: 45px;
   width: 100%;
-  background-color: #eee;
+  background-color: white;
   border-bottom: 1px solid #f99e54;
   display: flex;
   justify-content: space-between;
