--- a/src/less/navigation.less
+++ b/src/less/navigation.less
@@ -6,7 +6,7 @@
 
   height: 45px;
   width: 100%;
-  background-color: @white-1l;
+  background-color: white;
   border-bottom: 1px solid @tertiary;
 
   display: flex;
