--- a/src/css/index.css
+++ b/src/css/index.css
@@ -439,10 +439,16 @@ html body {
 }
 .portfolio .portfolio__profile {
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  position: relative;
-  background-color: white;
+  background-color: #133139;
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
+  margin: 0;
+  padding: 26px 6px;
+  border: 2px solid #f99e54;
+  -webkit-box-shadow: 2px 4px 14px 2px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 4px 14px 2px rgba(0, 0, 0, 0.4);
+  color: #f99e54;
 }
 .portfolio .portfolio__profile .btn {
   position: absolute;
