Edit Profile Btn Repositioned

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,5 +1,8 @@
 html {
   font-size: 62.5%;
+  font-family: 'Give You Glory', cursive;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Skranji', cursive;
 
   body {
     background-image: url("../img/guidr-background.jpg");
