--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,8 @@
 html {
   font-size: 62.5%;
+  font-family: 'Give You Glory', cursive;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Skranji', cursive;
 }
 html body {
   background-image: url("../img/guidr-background.jpg");
@@ -448,6 +451,7 @@ html body {
   border: 2px solid #f99e54;
   -webkit-box-shadow: 2px 4px 14px 2px rgba(0, 0, 0, 0.4);
   box-shadow: 2px 4px 14px 2px rgba(0, 0, 0, 0.4);
+  position: relative;
   color: #f99e54;
 }
 .portfolio .portfolio__profile .btn {
@@ -561,13 +565,14 @@ div .modal.show .modal-dialog .modal-footer {
 }
 Input {
   padding: 7px;
+  height: 35px;
 }
 .trip-form__container {
   background-color: rgba(106, 162, 197, 0.5);
   width: 83%;
   max-width: 1000px;
   height: auto;
-  margin: 125px;
+  margin: 125px auto;
   padding: 60px;
   border: 2px solid #f99e54;
   -webkit-box-shadow: 2px 4px 14px 2px rgba(0, 0, 0, 0.4);
@@ -585,6 +590,7 @@ Input {
   font-size: 16px;
   border-bottom-left-radius: 15%;
   border-top-left-radius: 15%;
+  height: 35px;
 }
 .trip-form__container form h2 {
   background-color: rgba(127, 192, 232, 0.8);
@@ -601,6 +607,7 @@ Input {
   display: flex;
   flex-direction: row;
   margin: 10px;
+  height: 35px;
 }
 .trip-form__container form .middleSegment {
   display: flex;
