--- a/src/less/portfolio.less
+++ b/src/less/portfolio.less
@@ -15,6 +15,8 @@
     -webkit-box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4); 
     box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
 
+    position: relative;
+
     color: @tertiary;
     .btn {
       position: absolute;
