--- a/src/less/trip-form.less
+++ b/src/less/trip-form.less
@@ -1,5 +1,6 @@
 Input {
   padding: 7px;
+  height: 35px;
 }
 
 .trip-form__container {
@@ -7,11 +8,12 @@ Input {
   width: 83%;
   max-width: 1000px;
   height: auto;
-  margin: 125px;
+  margin: 125px auto;
   padding: 60px;
   border: 2px solid @tertiary;
   -webkit-box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4); 
-box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
+  box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
+
   form {
     display: flex;
     flex-direction: column;
@@ -22,7 +24,8 @@ box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
       color: white;
       font-size: 16px;
       border-bottom-left-radius: 15%;
-      border-top-left-radius: 15%
+      border-top-left-radius: 15%;
+      height: 35px;
     }
     h2 {
       background-color: rgba(127,192,232, 0.8);
@@ -33,12 +36,13 @@ box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
       margin-bottom:25px;
       text-align: center;
       -webkit-box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4); 
-box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
+      box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
     }
     .textbox {
       display: flex;
       flex-direction: row;
       margin: 10px;
+      height: 35px;
     }
     .middleSegment {
       display: flex;
@@ -48,7 +52,7 @@ box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
         flex-direction: column;
         padding: 23px;
         .duration{
-          margin-top: 45px
+          margin-top: 45px;
         }
         #date-picker {
           display: flex;
@@ -63,7 +67,7 @@ box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
           margin-left: 5px;
           margin-bottom: 10px;
           -webkit-box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4); 
-box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
+          box-shadow: 2px 4px 14px 2px rgba(0,0,0,0.4);
         }
         p {
           color: white;
