Style Changes, Profile Images Added

--- a/src/less/login.less
+++ b/src/less/login.less
@@ -60,7 +60,7 @@
       .login__input--container {
         font-size: 1.6rem;
         display: flex;
-        flex-direction: column-reverse;
+
         i {
           margin-right: 12px;
           color: @white-1l;
@@ -113,8 +113,11 @@
               color: @white-1l;
             }
           }
-          
         }
+      }
+
+      .reg {
+        flex-direction: column;
       }
 
       div {
@@ -171,6 +174,16 @@
 
         cursor: pointer;
       }
+    }
+  }
+}
+
+.imageUploader {
+  .linkInput {
+    width: 100%;
+
+    input {
+      width: 100%;
     }
   }
 }
