--- a/src/css/index.css
+++ b/src/css/index.css
@@ -97,7 +97,6 @@ html body {
 .login div form .login__input--container {
   font-size: 1.6rem;
   display: flex;
-  flex-direction: column-reverse;
 }
 .login div form .login__input--container i {
   margin-right: 12px;
@@ -152,6 +151,9 @@ html body {
   /* Firefox 18- */
   color: #eee;
 }
+.login div form .reg {
+  flex-direction: column;
+}
 .login div form div {
   flex-direction: row;
   margin: 0 auto;
@@ -193,6 +195,12 @@ html body {
   color: #133139;
   text-decoration: underline;
   cursor: pointer;
+}
+.imageUploader .linkInput {
+  width: 100%;
+}
+.imageUploader .linkInput input {
+  width: 100%;
 }
 .navigation-container {
   position: fixed;
@@ -400,7 +408,7 @@ html body {
 }
 .user-grid .user-grid__card {
   background-color: rgba(106, 162, 197, 0.5);
-  height: 350px;
+  height: 365px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -413,13 +421,17 @@ html body {
 }
 .user-grid .user-grid__card .user-grid__card__banner {
   width: 100%;
-  height: 40px;
+  height: 80px;
   margin: 0;
   background-color: #7fc0e8;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.user-grid .user-grid__card .user-grid__card__banner h2 {
+  font-size: 3rem;
+  letter-spacing: 3px;
 }
 .user-grid .user-grid__card .modal-container {
   width: 100%;
@@ -506,7 +518,7 @@ html body {
 .home-search .grid .tripgrid__card,
 .portfolio-container .grid .tripgrid__card {
   background-color: rgba(106, 162, 197, 0.5);
-  height: 350px;
+  height: 375px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -516,9 +528,12 @@ html body {
 .home-search .grid .tripgrid__card h2,
 .portfolio-container .grid .tripgrid__card h2 {
   width: 100%;
-  height: 40px;
+  height: 80px;
   margin: 0;
   background-color: #7fc0e8;
+  font-size: 2.6rem;
+  letter-spacing: 3px;
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
