--- a/src/less/tripgrid.less
+++ b/src/less/tripgrid.less
@@ -16,15 +16,20 @@
   .tripgrid__card {
     background-color: rgba(106, 162, 197, 0.5);
 
-    height: 350px;
+    height: 375px;
     .flexColumnCenter();
     justify-content: space-between;
 
     h2 {
       width: 100%;
-      height: 40px;
+      height: 80px;
       margin: 0;
       background-color: @light-main;
+
+      font-size: 2.6rem;
+      letter-spacing: 3px;
+
+      text-align: center;
 
       .flexColumnCenter();
     }
