--- a/src/less/usergrid.less
+++ b/src/less/usergrid.less
@@ -8,7 +8,7 @@
     .user-grid__card {
         background-color: rgba(106, 162, 197, 0.5);
 
-        height: 350px;
+        height: 365px;
         .flexColumnCenter();
         justify-content: space-between;
 
@@ -19,11 +19,16 @@
 
         .user-grid__card__banner {
             width: 100%;
-            height: 40px;
+            height: 80px;
             margin: 0;
             background-color: @light-main;
 
             .flexColumnCenter();
+
+            h2 {
+                font-size: 3rem;
+                letter-spacing: 3px;
+            }
         }
         
 
