--- a/src/less/login.less
+++ b/src/less/login.less
@@ -22,6 +22,7 @@
       max-width: 450px;
       height: 600px;
       margin-bottom: 15px;
+      padding-bottom: 25px;
 
       background-color: @secondary;
 
@@ -52,14 +53,18 @@
     }
 
     form {
-      margin-top: 70px;
+      margin-top: 30px;
       width: 80%;
+
       img {
         width: 150px;
       }
+
       .login__input--container {
         font-size: 1.6rem;
         display: flex;
+
+        margin-bottom: 10px;
 
         i {
           margin-right: 12px;
@@ -118,6 +123,18 @@
 
       .reg {
         flex-direction: column;
+        margin-bottom: 0;
+
+        .imageUploader {
+          display: flex;
+          flex-direction: column;
+
+          margin-bottom: 0;
+        }
+      }
+
+      .remember {
+        margin: 0;
       }
 
       div {
