--- a/src/less/navigation.less
+++ b/src/less/navigation.less
@@ -83,3 +83,17 @@
     }
   }
 }
+
+@media(max-width: 552px) {
+  .navigation {
+    font-size: 1.4rem;
+
+    .normal { 
+      padding: 8px;
+    }
+
+    button {
+      margin:  0 20px 0 5px;
+    }
+  }
+}
